--- a/css/style.css
+++ b/css/style.css
@@ -10,27 +10,16 @@ padding-left: 8%;
 padding-top: 1%;
 padding-bottom: 1%;
 font-style: Ubuntu;
-font-size: 2em;
 }
 #logoimg{
 width: 14%;
 padding-right: 3%;
 z-index: 1;
 min-width: 40px;
-min-height: 40px;
 }
 #login-form{
 padding-left: 100px;
 
-}
-.col-lg-6{
-	font-size: 3em;
-}
-.col-sm-6{
-	font-size: 1em;
-}
-.col-xs-7{
-	font-size: 0.5em;
 }
 .row{
 	    text-decoration: none;
@@ -45,10 +34,13 @@ padding-left: 100px;
     color: #2098D1;
 }
 #button{
-	margin: 0px;
-	padding-top:3%;
-	padding-bottom: 3%;
-
+	background-color:#2098D1;
+    color: #fff;
+    border:0px;
+    font-weight: 8px;
+    font-size: 1.2em;
+    padding: 4px;
+    margin: 0px;
 }
 
 #righ
